--- a/myweb/templates/base.html
+++ b/myweb/templates/base.html
@@ -4,12 +4,23 @@
     <meta charset="utf-8">
     <title>{% block title %}Django Boards{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    {% block stylesheet %}{% endblock %}
   </head>
   <body>
-
+    {% block body %} 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mainMenu">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">{{ user.username }}</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
 
@@ -21,5 +32,6 @@
       {% block content %}
       {% endblock %}
     </div>
+    {% endblock body%}
   </body>
 </html>
