add some new feature like markdown and fix some questions

--- a/myweb/templates/base.html
+++ b/myweb/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block title %}Django Boards{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     {% block stylesheet %}{% endblock %}
+    {% block javascript %}{% endblock %}
   </head>
   <body>
     {% block body %} 
