--- a/myweb/templates/topic_posts.html
+++ b/myweb/templates/topic_posts.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load gravatar %}
 
 {% block title %}{{ topic.subject }}{% endblock %}
 
@@ -24,7 +25,7 @@
       <div class="card-body p-3">
         <div class="row">
           <div class="col-2">
-            <img src="{% static 'img/avatar.svg' %}" alt="{{ post.created_by.username }}" class="w-100">
+            <img src="{{ post.created_by|gravatar }}" alt="{{ post.created_by.username }}" class="w-100 rounded">
             <small>Posts: {{ post.created_by.posts.count }}</small>
           </div>
           <div class="col-10">
@@ -36,7 +37,7 @@
                 <small class="text-muted">{{ post.created_at }}</small>
               </div>
             </div>
-            {{ post.message }}
+            {{ post.get_message_as_markdown }}
             {% if post.created_by == user %}
               <div class="mt-3">
                 <a href="{% url 'edit_post' post.topic.board.pk post.topic.pk post.pk %}" class="btn btn-primary btn-sm" role="button">Edit</a>
